%% PoC #02 — Domain Model Class Diagram (Phase 4)
%% 4 Aggregate Root + 2 small Aggregate (Vernon IDDD §10 정합)
%% BC-CONTENT 단일 + BC-AUTH cross-cutting (Fowler / Evans)

classDiagram
    class User {
        <<Aggregate Root>>
        UUID id
        String email "UNIQUE"
        String username "UNIQUE"
        String password "BCrypt"
        String bio
        String imageUrl
        LocalDateTime createdAt
        +encryptPassword(encoder, plain)
        +setEmail(email)
        +setUsername(username)
        +equalsEmail(email)
        +equalsUsername(username)
    }

    class Article {
        <<Aggregate Root>>
        Integer id
        String slug "UNIQUE"
        String title "UNIQUE F-052"
        String description
        String content
        Set~ArticleTag~ articleTags "EAGER F-051"
        +addTag(articleTag)
        +setTitle(title) "slug 자동 갱신"
        +setDescription / setContent
        +isNotAuthor(user)
        -titleToSlug(title) "F-053 8 함정"
    }

    class ArticleComment {
        <<Aggregate Root>>
        Integer id
        Article article
        User author
        String content
        +isNotAuthor(user) "F-027 비재현"
    }

    class Tag {
        <<small Aggregate>>
        String name "PK 자연키"
        LocalDateTime createdAt
    }

    class ArticleTag {
        <<small Aggregate>>
        Article article
        Tag tag
    }

    class ArticleFavorite {
        <<small Aggregate>>
        User user
        Article article
    }

    class UserFollow {
        <<small Aggregate>>
        User follower
        User following
    }

    class UserRegistry {
        <<VO record>>
        String email
        String username
        String password
    }

    class ArticleFacets {
        <<VO record>>
        String tag / author / favorited
        int page "0-based"
        int size "0~50 cap"
    }

    class ArticleDetails {
        <<VO record>>
        Article article
        int favoritesCount
        boolean favorited
    }

    Article "1" --> "0..*" ArticleTag : has
    ArticleTag "*" --> "1" Tag : references
    Article "1" --> "0..*" ArticleFavorite : has
    ArticleFavorite "*" --> "1" User : favorited_by
    User "1" --> "0..*" UserFollow : follower
    User "1" --> "0..*" UserFollow : following
    Article "*" --> "1" User : author
    ArticleComment "*" --> "1" Article : article
    ArticleComment "*" --> "1" User : author
